# algolab25

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: Käyttöohje.md  Määrittelydokumentti.md  Viikkoraportti 1.md  Viikkoraportti 1.txt  Viikkoraportti 2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti6.md  testausraportti.md  toteutusraportti.md
src/: index.py
src/data/: Jerry C - Canon Rock - melody.mid  super_mario_play_test.mid
src/data/midi_test_data/: Super Mario Bross (Theme Song) - melody.mid
src/entities/: markov_generator.py  pygame_midi_player.py  trie.py  trie_node.py
src/output/: midi_player.py
src/services/: midi_player.py  midi_service.py  trie_service.py
src/tests/: midi_player_test.py  midi_service_test.py  trie_service_test.py  trie_test.py
src/ui/: midi_app.py  song_generator.py  ui.py
