[project]
name = "algolab25"
version = "0.1.0"
description = ""
authors = [
    {name = "anjovir",email = "108477264+anjovir@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "music21 (>=9.7.1,<10.0.0)",
    "mido (>=1.3.3,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "graphviz (>=0.21,<0.22)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
